[project]
name = "neighborhood_correlation"
version = "2.2"
dependencies = [
    "numpy",
    ]
authors = [
    {name = "Jacob Joseph", email = "jmjoseph@andrew.cmu.edu"},
]
description = "Protein sequence similarity assessment by assessing variance of sequences' scores to _other_ sequences"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"


[project.scripts]
NC_standalone = "neighborhood_correlation:main"
